Add export data button in customer show

--- a/src/Resources/translations/messages.en.yaml
+++ b/src/Resources/translations/messages.en.yaml
@@ -4,3 +4,5 @@ sylius:
             synolia_gdpr:
                 customer:
                     anonymize: Anonymize
+                    export_data: Export datas
+                    gdpr_title: GDPR
