--- a/src/Resources/translations/messages.en.yaml
+++ b/src/Resources/translations/messages.en.yaml
@@ -3,6 +3,7 @@ sylius:
         admin:
             synolia_gdpr:
                 customer:
+                    not_found: Customer not found
                     anonymize: Anonymize
                     export_data: Export datas
                     gdpr_title: GDPR
