Create advanced actions menu, anomization of not logged user since X and easy override controller forms

--- a/src/Resources/translations/messages.en.yaml
+++ b/src/Resources/translations/messages.en.yaml
@@ -7,6 +7,11 @@ sylius:
                     anonymize: Anonymize
                     export_data: Export data
                     gdpr_title: GDPR
+                advanced_actions:
+                    title: Advanced actions
+                    anonymize_customer_not_logged_since:
+                        label: Anonymize customer not logged since
+        execute: Execute
 sylius_plus:
     rbac:
         parent:
