--- a/src/Resources/translations/messages.en.yaml
+++ b/src/Resources/translations/messages.en.yaml
@@ -8,8 +8,10 @@ sylius:
                     gdpr_title: GDPR
                 advanced_actions:
                     title: Advanced actions
-                    anonymize_customer_not_logged_before:
-                        label: Anonymize customer not logged before
+                    anonymize_customers_not_logged_before:
+                        label: Anonymize customers not logged before
+                    anonymize_customer_without_any_orders:
+                        label: Anonymize customers without any orders
         execute: Execute
 sylius_plus:
     rbac:
