--- a/src/Resources/translations/messages.fr.yaml
+++ b/src/Resources/translations/messages.fr.yaml
@@ -7,3 +7,10 @@ sylius:
                     anonymize: Anonymizer
                     export_data: Récupération des informations
                     gdpr_title: RGPD
+sylius_plus:
+    rbac:
+        parent:
+            plugin_synolia_gdpr_anonymize_customers: RGPD Anonymisation
+            plugin_synolia_gdpr_export_customer_datas: RGPD Récupération des informations
+        synolia_sylius_gdpr_admin_anonymize_customer: Anonymiser
+        synolia_sylius_gdpr_admin_export_customer_datas: Récupération des informations
