--- a/src/Resources/translations/messages.fr.yaml
+++ b/src/Resources/translations/messages.fr.yaml
@@ -8,6 +8,7 @@ sylius:
                     gdpr_title: RGPD
                 advanced_actions:
                     title: Actions avancées
+                    customer_anonymized_count: client anonymisé.
                     anonymize_customers_not_logged_before:
                         label: Anonymiser tous les utlisateurs non connectés avant
                     anonymize_customer_without_any_orders:
