--- a/src/Resources/translations/messages.fr.yaml
+++ b/src/Resources/translations/messages.fr.yaml
@@ -8,9 +8,9 @@ sylius:
                     export_data: Récupération des informations
                     gdpr_title: RGPD
                 advanced_actions:
-                    title: Actions avancée
+                    title: Actions avancées
                     anonymize_customer_not_logged_before:
-                        label: Anonymiser tous les utlisateurs non connecté avant
+                        label: Anonymiser tous les utlisateurs non connectés avant
         execute: Executer
 sylius_plus:
     rbac:
